summary: post request working - issue: fix the lenght
