# swagger.json
@@ -10,6 +10,7 @@
   "schemes": [
     "http",
     "https"
+    
   ],
   "paths": {
     "/": {
@@ -52,16 +53,10 @@
             "schema": {
               "type": "object",
               "properties": {
-                "email": {
+                "band": {
                   "example": "any"
                 },
-                "songname": {
-                  "example": "any"
-                },
-                "name": {
-                  "example": "any"
-                },
-                "ipaddress": {
+                "songs": {
                   "example": "any"
                 }
               }
@@ -69,8 +64,11 @@
           }
         ],
         "responses": {
-          "204": {
-            "description": "No Content"
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "500": {
             "description": "Internal Server Error"
